--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -659,6 +659,18 @@ footer .copyText p {
 	font-weight: 700;
 	color: var(--fv-primary);
 }
+.custom-toast {
+  font-size: 1.4rem !important;
+  color: #000000;
+  box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.75);
+}
+
+/* Change progress bar color */
+.custom-progress {
+  background: var(--fv-danger) !important; /* Use your desired color */
+}
 
 /* ====== Responsive ====== */
 @media(min-width: 1799px) {
